[project]
name = "deriva-imaging-pipeline"
version = "0.1.0"
description = "Tools and configuration for the DERIVA imaging pipeline"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "USC Information Sciences Institute, Informatics Systems Research Division", email = "isrd-support@isi.edu" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "deriva",
    "lxml",
    "python-dateutil",
    "requests",
    "tifffile",
    "imagetools @ git+https://github.com/informatics-isi-edu/imagetools.git",
]

[project.urls]
Homepage = "https://github.com/informatics-isi-edu/deriva-imaging-pipeline"
Repository = "https://github.com/informatics-isi-edu/deriva-imaging-pipeline"
Issues = "https://github.com/informatics-isi-edu/deriva-imaging-pipeline/issues"

[project.scripts]
deriva-imaging-server = "deriva_imaging_pipeline.server:main"
deriva-imaging-client = "deriva_imaging_pipeline.client:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed-python = true
